fix: 이미지 동적 합성 비율 수정